Gnome-Shell: [MessageList] Fix unwanted enlargement of titles in non-English locales
Especially in CJK font-family, 2px bottom-padding seemed too small
to insert the 'close' button into that row, so let's get the finer
spacing balance between titles and contents...

--- a/shell/sass/gnome-shell/_common.scss
+++ b/shell/sass/gnome-shell/_common.scss
@@ -1315,13 +1315,13 @@ StScrollBar {
 
   &-title {
     @include fontscaling($ref_size * 1.1);
-    padding: 0 0 2px;
+    padding: 0 0 4px;
     font-weight: 700;
   }
 
   &-content {
     @include fontscaling($ref_size * 0.9);
-    padding: 2px 8px 4px;
+    padding: 0 8px 4px;
 
     * > StIcon {
       padding: 3px;
